AC_INIT([coprissi], [1.0.0], [kamil.jiwa@gmail.com])
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_CHECK_HEADERS([errno.h fcntl.h ftw.h libexif/exif-content.h libexif/exif-data.h libexif/exif-tag.h stdio.h stdlib.h string.h sys/stat.h sys/types.h time.h unistd.h])
AC_FUNC_MALLOC

AC_CONFIG_FILES([Makefile src/Makefile])
AC_CONFIG_MACRO_DIR([m4])

AC_OUTPUT
